# bnt

./: .dockerignore  .env.example  .gitignore  BNT_PROJECT_CONTEXT.md  Dockerfile  LICENSE  README.md  bnt_context.md  docker-compose.yml  pyproject.toml  system.md
.github/workflows/: deploy.yml
backend/: .env.example  README.md
backend/app/: config.py  logging.py  main.py
backend/app/audio/: validation.py  wav.py
backend/app/routes/: ask_audio.py
backend/app/services/: conversation.py  fake_response_service.py  openai_response_service.py  response_service.py
backend/tests/: test_ask_audio.py  test_conversation.py  test_openai_response_service.py
bnt_core/: __init__.py  state_machine.py  wav.py
docs/: backend-plan.md  firmware-plan.md  milestones.md  mvp-implementation-plan.md  simulator-plan.md  state-machine-plan.md  testing-plan.md
firmware/: README.md  platformio.ini
firmware/include/: secrets.example.h
firmware/src/: main.cpp
firmware/wokwi/: README.md  diagram.json  inmp441.chip.c  inmp441.chip.json  max98357.chip.c  max98357.chip.json  speaker.chip.c  speaker.chip.json
simulator/: README.md
simulator/bnt_simulator/: app.py  audio_input.py  audio_output.py  backend_client.py  button.py  config.py  main.py
simulator/tests/: test_fixture_flow.py
tests/: test_state_machine.py
