[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bnt"
version = "0.1.0"
description = "Simulator-first MVP prototype for the bnt physical AI button."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "openai>=1.40.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests", "simulator/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["bnt_core*", "backend*", "simulator*"]
